
  * Other Improvements
    ------------------
    * New, smaller sizes available in "Eraser" tool.
      (h/t Jackson Bray for the suggestion)

    * "Eraser" tool now draws smoothly connected strokes,
      like the "Brush" tool, when the mouse is moved quickly
      (relative to the eraser size; especially useful for the
      smallest erasers).

  * Ports & Building
    ----------------
    * Corrections for Haiku not opening saved files.
      (Ref: https://github.com/haikuports/haikuports/issues/3045)
      Gerasim Troeglazov <3dEyes@gmail.com>

    * Windows build changes
      * Enabling PowerTools repositry to install additional SDL* packages
      * Corrected README launcher for English, after install completes

  * New Brushes
    -----------
    * Footprints
      * Human feet
        Based on Openclipart by "netalloy"
        (https://openclipart.org/artist/netalloy)
        Creative Commons Zero 1.0 Public Domain License

      * Paw (dog or cat like)
        Based on Openclipart by "alinager"
        (https://openclipart.org/artist/alinager)
        Creative Commons Zero 1.0 Public Domain License

      * Shoes
        Based on Openclipart by "Tavin"
        (https://openclipart.org/artist/Tavin)
        Creative Commons Zero 1.0 Public Domain License

  * Documentation updates
    ---------------------
    * Cleaned up HTML code of HTML-based documentation.

    * Sub-section links within README's Table of Contents.

  * Bug Fixes
    ---------
    * Mended issue where stamp descriptions were not loading
      when "getenv()" (e.g., "getenv("LANGUAGE")") returned an
      empty string, rather than a NULL.

    * Mended bug where corrupt text would appear as stamp
      descriptions, if we failed to know what language to use
      (see above).

  * Translation Updates:
    --------------------
    * Basque translation
      Alexander Gabilondo <alexgabi@irakasle.eus>

    * Catalan translation
      Pere Pujal i Carabantes <pere@fornol.no-ip.org>
